test: Test logs
